# sensr_sdk

./: build_bin_output.sh
samples/bin_output/: CMakeLists.txt  main.cpp
